More performance profiling. No easy wins.

--- a/profiling.ipynb
+++ b/profiling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "11a6f942",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "2d13e4ec",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "677 μs ± 20.3 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "339 μs ± 55.5 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "9cc1da9d",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "336 μs ± 7.09 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "195 μs ± 20.8 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -72,12 +72,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W1206 14:45:39.223408   27104 cuda_executor.cc:1802] GPU interconnect information not available: INTERNAL: NVML doesn't support extracting fabric info or NVLink is not used by the device.\n",
+      "W1206 14:45:39.226516   26976 cuda_executor.cc:1802] GPU interconnect information not available: INTERNAL: NVML doesn't support extracting fabric info or NVLink is not used by the device.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Array([ 3.1415927,  0.       , -8.193671 ,  2.9626648], dtype=float32)"
+       "Array([ 3.1415927,  0.       , -8.193671 ,  2.9626658], dtype=float32)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "a093a2bc",
    "metadata": {},
    "outputs": [
@@ -103,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "180 μs ± 14.5 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "252 μs ± 41.4 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -113,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e7fc18c3",
    "metadata": {},
    "outputs": [
@@ -121,18 +129,160 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "232 μs ± 45.9 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "191 μs ± 18.9 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
     "%timeit pendulums.double_pendulum_ode_jax(0.0, state_jax, r_jax, m_jax)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "17d11656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jax\n",
+    "from k_n_pendulum import KN_Pendulum_JAX_vispy\n",
+    "rk4_step_batch_n = jax.jit(jax.vmap(pendulums.n_pendulum_rk4_step_jax,\n",
+    "                                               in_axes=(0, None, None, None, None, None)),\n",
+    "                                      static_argnums=(5,))\n",
+    "rk4_step_batch_double = jax.jit(jax.vmap(pendulums.double_pendulum_rk4_step_jax,\n",
+    "                                               in_axes=(0, None, None, None, None)))\n",
+    "\n",
+    "k = 1000*1000\n",
+    "states = jnp.tile(state0, (k, 1))\n",
+    "key = jax.random.PRNGKey(0)\n",
+    "perturbations = jax.random.uniform(key, shape=(k, state0.shape[0]),\n",
+    "                                minval=-KN_Pendulum_JAX_vispy.P_MAGNITUDE,\n",
+    "                                maxval=KN_Pendulum_JAX_vispy.P_MAGNITUDE)\n",
+    "states = states.at[:, :n].add(perturbations[:, :n])\n",
+    "\n",
+    "rk4_step_batch_n(states, 0.0, dt, r_jax, m_jax, n);  # Warm-up JAX compilation\n",
+    "rk4_step_batch_double(states, 0.0, dt, r_jax, m_jax);  # Warm-up JAX compilation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "072872be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.1 ms ± 626 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "12.7 ms ± 8.4 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Still very little difference in performance between n-pendulum and double pendulum\n",
+    "%timeit -n 100 rk4_step_batch_n(states, 0.0, dt, r_jax, m_jax, n)\n",
+    "%timeit -n 100 rk4_step_batch_double(states, 0.0, dt, r_jax, m_jax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3f60fa5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rk4_step_batch_n_2D = jax.jit(jax.vmap(jax.vmap(pendulums.n_pendulum_rk4_step_jax,\n",
+    "                                               in_axes=(0, None, None, None, None, None)),\n",
+    "                                               in_axes=(0, None, None, None, None, None)),\n",
+    "                                      static_argnums=(5,))\n",
+    "rk4_step_batch_double_2D = jax.jit(jax.vmap(jax.vmap(pendulums.double_pendulum_rk4_step_jax,\n",
+    "                                               in_axes=(0, None, None, None, None)),\n",
+    "                                               in_axes=(0, None, None, None, None)))\n",
+    "\n",
+    "k_2D = np.sqrt(k).astype(int)\n",
+    "theta1 = jnp.linspace(-2*np.pi, 2*np.pi, k_2D)\n",
+    "theta2 = jnp.linspace(2*np.pi, 2*np.pi, k_2D)\n",
+    "theta1_grid, theta2_grid = jnp.meshgrid(theta1, theta2, indexing='xy')\n",
+    "states_2D = jnp.zeros(\n",
+    "    shape=(k_2D, k_2D, 4))\n",
+    "states_2D = states_2D.at[:, :, 0].set(theta1_grid)\n",
+    "states_2D = states_2D.at[:, :, 1].set(theta2_grid)\n",
+    "\n",
+    "rk4_step_batch_n_2D(states_2D, 0.0, dt, r_jax, m_jax, n);  # Warm-up JAX compilation\n",
+    "rk4_step_batch_double_2D(states_2D, 0.0, dt, r_jax, m_jax);  # Warm-up JAX compilation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "724a8535",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.1 ms ± 459 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "12.7 ms ± 17.3 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# No measured difference in double vmap of flat array vs. 2D array (1e6 vs 1e3 x 1e3)\n",
+    "%timeit -n 100 rk4_step_batch_n_2D(states_2D, 0.0, dt, r_jax, m_jax, n)\n",
+    "%timeit -n 100 rk4_step_batch_double_2D(states_2D, 0.0, dt, r_jax, m_jax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "393c4e50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rk4_loop(states_2D, x):\n",
+    "    states_loop = states_2D\n",
+    "    for _ in range(x):\n",
+    "        states_loop = rk4_step_batch_n_2D(states_loop, 0.0, dt, r_jax, m_jax, n)\n",
+    "    return states_loop\n",
+    "\n",
+    "@jax.jit(static_argnames=['x'])\n",
+    "def jax_loop(states_2D, x):\n",
+    "    def body(_, s):\n",
+    "        return rk4_step_batch_n_2D(s, 0.0, dt, r_jax, m_jax, n)\n",
+    "    return jax.lax.fori_loop(0, x, body, states_2D)\n",
+    "\n",
+    "\n",
+    "rk4_loop(states_2D, 1);\n",
+    "jax_loop(states_2D, 1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6de4984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79.7 ms ± 6.48 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "80.8 ms ± 2.25 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# JAX fori_loop is NOT faster.\n",
+    "%timeit -n 10 rk4_loop(states_2D, 6)\n",
+    "%timeit -n 10 jax_loop(states_2D, 6)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sim-g2PvWrfu-py3.11",
+   "display_name": "sim-Gvlt1Og_-py3.11",
    "language": "python",
    "name": "python3"
   },
